Changed styles to remove horizontal scroll and also changes to fix comment box position

--- a/src/routes/incidents/detail/stateLabel/states/ReportedLabel.css
+++ b/src/routes/incidents/detail/stateLabel/states/ReportedLabel.css
@@ -27,14 +27,14 @@
     left: 5px;
     position: absolute;
     top: 15px;
-    width: 200px;
+    width: 175px;
 }
 
 .reported-label-text {
     font-family: "Lato", sans-serif;
     font-size: 8pt;
     font-weight: bold;
-    width: 300px;
+    width: 175px;
 }
 
 .reported-label-box:hover{
